# campus-drcom-keepalive

./: .env.example  .gitignore  Cargo.toml  README.md  campus_keepalive.py  network_path_manager.py
.github/workflows/: release.yml
deploy/: campus-keepalive.service.example  campus-keepalive@.service.example  network-path-manager.env.example  network-path-manager.service.example
src/: lib.rs  main.rs
tests/: test_campus_keepalive.py  test_network_path_manager.py
