[package]
name = "campus-drcom-keepalive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
if-addrs = "0.14"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde_json = "1.0"
url = "2.5"
